--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
-<div class="flex items-center justify-center min-h-screen bg-gray-100">
+<div class="flex items-center justify-center min-h-screen">
         <div class="max-w-md w-full">
             <div class="bg-white shadow-md rounded-lg px-10 py-8">
-                <h1 class="text-2xl font-bold mb-6">Ticket System</h1>
+                <h1 class="text-2xl font-bold mb-6 text-violet-500">Swift Ticket</h1>
                 <form id="loginForm" onsubmit="login(event)">
                     <div class="mb-4">
                         <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
@@ -12,7 +12,7 @@
                         <input type="password" name="password" id="password" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:shadow-outline" placeholder="Enter your password" required>
                     </div>
                     <div class="flex items-center justify-between">
-                        <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                        <button type="submit" class="bg-violet-300 hover:bg-violet-400 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                             Log in
                         </button>
                         <a href="#" class="text-gray-700 text-sm font-bold hover:underline">Forgot Password?</a>
