--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,18 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url('/images/navbar.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .content {
-  padding: 50px;
+  padding-right: 50px;
+  padding-left: 50px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+
 }
+
 
 a {
   color: #00B7FF;
