--- a/views/server_error.hbs
+++ b/views/server_error.hbs
@@ -1,9 +1,9 @@
-<div class="flex items-center justify-center min-h-screen bg-gray-100">
+<div class="flex items-center justify-center min-h-screen">
     <div class="max-w-md w-full">
         <div class="bg-white shadow-md rounded-lg px-10 py-8">
-        <h1 class="text-2xl font-bold mb-6">Internal Server Error</h1>
+        <h1 class="text-2xl font-bold mb-6 text-violet-500">Internal Server Error</h1>
         <p class="text-gray-700 mb-6">We apologize for the inconvenience. An internal server error has occurred.</p>
-        <a href="/" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        <a href="/" class="bg-violet-300 hover:bg-violet-400 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
             Go to Home
         </a>
         </div>
