--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,8 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url('/images/navbar.svg');
-  background-repeat: no-repeat;
+  background-image: url('/images/background.svg');
   background-size: cover;
-  opacity: 0.5;
+  background-repeat: repeat;
 }
 
 .content {
