--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,6 @@
         top: 0;
         left: 0;
         right: 0;
-        z-index: 999;
       }
 
       .container {
@@ -46,16 +45,17 @@
 
       </div>
     </nav>
-    <div id="sidebar" class="bg-white w-64 h-screen fixed top-0 left-0 transform -translate-x-full transition-transform duration-300 ease-in-out">
-      <ul class="mt-8">
-        <li><a href="/tickets/create" class="text-gray-600 hover:text-gray-800">Create Ticket</a></li>
-        <li><a href="/tickets" class="text-gray-600 hover:text-gray-800">All Tickets</a></li>
-        <li><a href="/tickets/open" class="text-gray-600 hover:text-gray-800">Open Tickets</a></li>
-        <li><a href="/tickets/closed" class="text-gray-600 hover:text-gray-800">Closed Tickets</a></li>
+
+    <div id="sidebar" class="bg-violet-200 w-64 h-screen fixed top-0 left-0 transform -translate-x-full transition-transform duration-300 ease-in-out">
+      <ul class="mt-8 font-bold p-6">
+        <li><a href="/tickets/create" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Create Ticket</a></li>
+        <li><a href="/tickets" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">All Tickets</a></li>
+        <li><a href="/tickets/open" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Open Tickets</a></li>
+        <li><a href="/tickets/closed" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Closed Tickets</a></li>
       </ul>
     </div>
 
-    <div class="container mx-auto content">
+    <div class="container mx-auto content h-screen">
       {{{body}}}
     </div>
 
