hide burger button in case you are not logged in

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,9 +65,11 @@
         if (token) {
           document.getElementById('loginNavButton').style.display = 'none';
           document.getElementById('logoutNavButton').style.display = 'block';
+          document.getElementById('burgerMenuButton').style.display = 'block';
         } else {
           document.getElementById('loginNavButton').style.display = 'block';
           document.getElementById('logoutNavButton').style.display = 'none';
+          document.getElementById('burgerMenuButton').style.display = 'none';
         }
       });
 
