--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,10 +48,10 @@
 
     <div id="sidebar" class="bg-violet-200 w-64 h-screen fixed top-0 left-0 transform -translate-x-full transition-transform duration-300 ease-in-out">
       <ul class="mt-8 font-bold p-6">
-        <li><a href="/tickets/create" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Create Ticket</a></li>
         <li><a href="/tickets" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">All Tickets</a></li>
         <li><a href="/tickets/open" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Open Tickets</a></li>
         <li><a href="/tickets/closed" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Closed Tickets</a></li>
+        <li><a href="/tickets/create" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Create Ticket</a></li>
       </ul>
     </div>
 
@@ -60,7 +60,35 @@
     </div>
 
     <script>
+
+
+      const links = document.querySelectorAll('a');
+
+      links.forEach(link => {
+        link.addEventListener('click', event => {
+          event.preventDefault();
+          const token = localStorage.getItem('token');
+          const links = document.querySelectorAll('a');
+
+          links.forEach(link => {
+            link.addEventListener('click', event => {
+              event.preventDefault();
+              if (token) {
+            const href = link.getAttribute('href');
+            const newHref = `${href}?token=${token}`;
+            window.location.href = newHref;
+              } else {
+            window.location.href = '/auth/login';
+              }
+            });
+          });
+        });
+      });
+
       document.addEventListener('DOMContentLoaded', () => {
+
+        
+
         const token = localStorage.getItem('token');
         if (token) {
           document.getElementById('loginNavButton').style.display = 'none';
