--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -74,11 +74,11 @@
             link.addEventListener('click', event => {
               event.preventDefault();
               if (token) {
-            const href = link.getAttribute('href');
-            const newHref = `${href}?token=${token}`;
-            window.location.href = newHref;
+                const href = link.getAttribute('href');
+                const newHref = `${href}?token=${token}`;
+                window.location.href = newHref;
               } else {
-            window.location.href = '/auth/login';
+                window.location.href = '/auth/login';
               }
             });
           });
@@ -88,8 +88,12 @@
       document.addEventListener('DOMContentLoaded', () => {
 
         
-
         const token = localStorage.getItem('token');
+
+        if (window.location.pathname !== '/auth/login' && !token) {
+          window.location.href = '/auth/login';
+        }
+
         if (token) {
           document.getElementById('loginNavButton').style.display = 'none';
           document.getElementById('logoutNavButton').style.display = 'block';
