--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,16 +15,18 @@
             <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
             <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Title</th>
             <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created At</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
             </tr>
         </thead>
         <tbody>
             {{#each tickets}}
             <tr class="bg-white">
-            <td class="px-6 py-4 whitespace-nowrap">{{assigned_to}}</td>
-            <td class="px-6 py-4 whitespace-nowrap">{{created_by}}</td>
-            <td class="px-6 py-4 whitespace-nowrap">{{description}}</td>
-            <td class="px-6 py-4 whitespace-nowrap">{{title}}</td>
-            <td class="px-6 py-4 whitespace-nowrap">{{createdAt}}</td>
+                <td class="px-6 py-4 whitespace-nowrap">{{ assigned_to }}</td>
+                <td class="px-6 py-4 whitespace-nowrap">{{ created_by }}</td>
+                <td class="px-6 py-4 whitespace-nowrap">{{ description }}</td>
+                <td class="px-6 py-4 whitespace-nowrap">{{ title }}</td>
+                <td class="px-6 py-4 whitespace-nowrap">{{ createdAt }}</td>
+                <td class="px-6 py-4 whitespace-nowrap">{{ status }}</td>
             </tr>
             {{/each}}
         </tbody>
