--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -49,8 +49,18 @@
 
     <div id="sidebar" class="bg-violet-200 w-64 h-screen fixed top-0 left-0 transform -translate-x-full transition-transform duration-300 ease-in-out">
       <ul class="mt-8 font-bold p-6">
-        <li><a href="/" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">All Tickets</a></li>
-        <li><a href="/ticket/create" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Create Ticket</a></li>
+        <li id="all-tickets-link">
+          <a href="/" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">All Tickets</a>
+        </li>
+        <li id="create-tickets-link">
+          <a href="/ticket/create" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Create Ticket</a>
+        </li>
+        <li id="all-users-link">
+          <a href="/user" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">All Users</a>
+        </li>
+        <li id="create-users-link">
+          <a href="/user/create" class="block py-2 px-4 text-gray-800 hover:bg-purple-700 hover:text-white">Create User</a>
+        </li>
       </ul>
     </div>
 
@@ -97,6 +107,26 @@
           document.getElementById('loginNavButton').style.display = 'block';
           document.getElementById('logoutNavButton').style.display = 'none';
           document.getElementById('burgerMenuButton').style.display = 'none';
+        }
+
+        const role = localStorage.getItem('role');
+
+        if (role !== 'admin') {
+          document.getElementById('all-users-link').style.display = 'block';
+          document.getElementById('create-tickets-link').style.display = 'block';
+          document.getElementById('all-tickets-link').style.display = 'block';
+          document.getElementById('create-users-link').style.display = 'block';
+        }
+        else if (role === 'tech') {
+          document.getElementById('all-users-link').style.display = 'none';
+          document.getElementById('create-tickets-link').style.display = 'none';
+          document.getElementById('all-tickets-link').style.display = 'block';
+          document.getElementById('create-users-link').style.display = 'none';
+        } else {
+          document.getElementById('all-users-link').style.display = 'none';
+          document.getElementById('create-tickets-link').style.display = 'block';
+          document.getElementById('all-tickets-link').style.display = 'block';
+          document.getElementById('create-users-link').style.display = 'none';
         }
 
       });
