--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,19 +3,20 @@
 
     <div class="bg-gradient-to-r from-purple-500 to-indigo-500">
     <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold text-white">Ticket List</h1>
+        <h1 class="text-3xl font-bold text-white">{{ role }} Ticket List</h1>
     </div>
     </div>
     {{#if tickets.length}}
     <table class="min-w-full divide-y divide-gray-200">
         <thead>
             <tr>
-            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Assigned To</th>
-            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created By</th>
-            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
-            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Title</th>
-            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created At</th>
-            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Assigned To</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created By</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Title</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created At</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+                <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Resolve</th>
             </tr>
         </thead>
         <tbody>
@@ -27,6 +28,9 @@
                 <td class="px-6 py-4 whitespace-nowrap">{{ title }}</td>
                 <td class="px-6 py-4 whitespace-nowrap">{{ createdAt }}</td>
                 <td class="px-6 py-4 whitespace-nowrap">{{ status }}</td>
+                <td class="px-6 py-4 whitespace-nowrap">
+                    <button class="bg-violet-500 hover:bg-violet-700 text-white font-bold py-2 px-4 rounded" onclick="resolveTicket('{{id}}')">Resolve</button>
+                </td>
             </tr>
             {{/each}}
         </tbody>
@@ -39,3 +43,31 @@
 
 
 </div>
+
+<script>
+    function resolveTicket(id) {
+        const token = localStorage.getItem('token');
+        fetch(`/ticket/${id}`, {
+            method: 'PUT',
+            headers: {
+                'Content-Type': 'application/json',
+                'x-access-token': token,
+            },
+            body: JSON.stringify({ status: 'closed' }),
+
+        })
+        .then(response => {
+            if (response.status === 401) {
+                window.location.href = '/unauthorized';
+            } else if (response.status === 500) {
+                window.location.href = '/internal_error';
+            } 
+            else {
+                window.location.href = `/?token=${token}`;
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
+    }
+</script>
