--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -111,7 +111,7 @@
 
         const role = localStorage.getItem('role');
 
-        if (role !== 'admin') {
+        if (role === 'admin') {
           document.getElementById('all-users-link').style.display = 'block';
           document.getElementById('create-tickets-link').style.display = 'block';
           document.getElementById('all-tickets-link').style.display = 'block';
