--- a/views/create_ticket.hbs
+++ b/views/create_ticket.hbs
@@ -5,7 +5,7 @@
 </div>
 
 <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-  <form onsubmit="createTicket()" method="POST">
+  <form>
     <div class="mb-4">
       <label for="title" class="block text-gray-700 text-sm font-bold mb-2">Title:</label>
       <input type="text" id="title" name="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
@@ -15,7 +15,7 @@
       <textarea id="description" name="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" rows="5" required></textarea>
     </div>
     <div class="flex justify-end">
-      <button type="submit" class="bg-violet-400 hover:bg-violet-500 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+      <button onclick="createTicket()" class="bg-violet-400 hover:bg-violet-500 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Create
       </button>
     </div>
@@ -35,15 +35,11 @@
         'x-access-token': token
       },
       body: JSON.stringify({ title, description })
-    })
+    }).then(res => res.json())
       .then(data => {
-        if (data.error) {
-          console.error(error);
-        } 
-      })
-      .catch(error => {
-        console.error(error);
-      }); 
+        window.location.href = '/?token=' + data.token;
+      });
+    
 
 
   }
