--- a/views/create_user.hbs
+++ b/views/create_user.hbs
@@ -5,7 +5,7 @@
 </div>
 
 <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-  <form onsubmit="createUser()" method="POST">
+  <div>
     <div class="mb-4">
       <label for="title" class="block text-gray-700 text-sm font-bold mb-2">Email:</label>
       <input type="text" id="email" name="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
@@ -23,11 +23,11 @@
     </div>
 
     <div class="flex justify-end">
-      <button type="submit" class="bg-violet-400 hover:bg-violet-500 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+      <button onclick="createUser()" class="bg-violet-400 hover:bg-violet-500 text-white font-semibold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Create
       </button>
     </div>
-  </form>
+  </div>
 </div>
 
 <script>
@@ -44,15 +44,10 @@
         'x-access-token': token
       },
       body: JSON.stringify({ email, password, type })
-    })
+    }).then(res => res.json())
       .then(data => {
-        if (data.error) {
-          console.error(error);
-        } 
-      })
-      .catch(error => {
-        console.error(error);
-      }); 
+        window.location.href = '/user?token=' + data.token;
+      });
 
 
   }
