--- a/views/create_ticket.hbs
+++ b/views/create_ticket.hbs
@@ -5,7 +5,7 @@
 </div>
 
 <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-  <form>
+  <div>
     <div class="mb-4">
       <label for="title" class="block text-gray-700 text-sm font-bold mb-2">Title:</label>
       <input type="text" id="title" name="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
@@ -19,7 +19,7 @@
         Create
       </button>
     </div>
-  </form>
+  </div>
 </div>
 
 <script>
